overflow issue fix

--- a/style.css
+++ b/style.css
@@ -202,9 +202,8 @@ tr button{
   .bar-item{
     width: 100%;
   }
-  /* table{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-  } */
+  #customers, #income{
+    width: 90vw;
+    overflow: scroll;
+  }
 }
